deploy/k8s/010-nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: javascript30-nginx
  namespace: javascript30
  labels:
    app: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 391324319136.dkr.ecr.us-west-2.amazonaws.com/javascript30-nginx
        ports:
        - containerPort: 80
