deploy/k8s/002-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-cluster-ip-service
  namespace: javascript30
spec:
  type: ClusterIP
  selector:
    app: nginx
  ports:
    - name: nginx
      port: 80
      targetPort: 80
