deploy/k8s/003-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  namespace: javascript30
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    acme.cert-manager.io/http01-edit-in-place: "true"
spec:
  tls:
    - hosts:
        - javascript30.brennonloveless.com
      secretName: javascript30-crt
  rules:
    - host: javascript30.brennonloveless.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nginx-cluster-ip-service
                port:
                  number: 80
